Closed
Bug 344904
Opened 19 years ago
Closed 19 years ago
"ASSERTION: null marker parent", crash [@ nsSVGMarkerFrame::GetCanvasTM]
Categories
(Core :: SVG, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: jruderman, Assigned: tor)
References
Details
(Keywords: crash, testcase)
Crash Data
Attachments
(2 files)
224 bytes,
image/svg+xml
|
Details | |
1.01 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
This testcase causes:
###!!! ASSERTION: null marker parent: 'mMarkerParent', file /Users/admin/trunk/mozilla/layout/svg/base/src/nsSVGMarkerFrame.cpp, line 176
followed by a crash [@ nsSVGMarkerFrame::GetCanvasTM] in both nightly and debug Mac builds.
Reporter | ||
Comment 1•19 years ago
|
||
Updated•19 years ago
|
OS: Mac OS X 10.4 → All
Hardware: Macintosh → PC
Attachment #229503 -
Flags: superreview+
Attachment #229503 -
Flags: review?(roc)
Attachment #229503 -
Flags: review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 4•19 years ago
|
||
Verified FIXED with build 2006-07-21-08 of trunk SeaMonkey on Windows XP.
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
Crash Signature: [@ nsSVGMarkerFrame::GetCanvasTM]
You need to log in
before you can comment on or make changes to this bug.
Description
•