Bug 344904 - make sure state bits are set correctly for marker frame to prevent crash. r+sr=roc